2008-1-4 Eloy Duran <e.duran@superalloy.nl>

	* app_generators/rucola/rucola_generator.rb,
	  test/test_rucola_generator.rb:

	Added the test/lib dir to the app generator.

2008-1-4 Eloy Duran <e.duran@superalloy.nl>

	* app_generators/rucola/rucola_generator.rb,
	  test/test_rucola_generator.rb:

	Added the app/assets/ and lib/ dirs to the app generator.

2008-1-4 Eloy Duran <e.duran@superalloy.nl>

	* History.txt,
	  lib/rucola/version.rb,
	  website/index.html:

	Changed files after 0.0.3 release

2007-11-29 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/info_plist.rb,
	  test/test_info_plist.rb:

	InfoPlist#app_name returns a ruby string instead of a NSString.

2007-11-29 Eloy Duran <e.duran@superalloy.nl>

	* app_generators/rucola/templates/app/controllers/application_controller.rb,
	  lib/rucola/info_plist.rb,
	  lib/rucola/version.rb,
	  lib/rucola/xcode.rb,
	  test/test_document_model_generator.rb:

	Fixed bugs that were introduced because the default is again to return mutable objects in RC.

2007-11-29 Eloy Duran <e.duran@superalloy.nl>

	* History.txt,
	  README.txt,
	  config/hoe.rb,
	  website/index.html,
	  website/index.txt:

	Updated for 0.0.2.

2007-11-21 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/initializer.rb,
	  test/test_initializer.rb:

	- Spec'd the class methods of Initializer.
	- Changed the way plugins are loaded.
	- Refactored some minor stuff.

2007-11-21 Eloy Duran <e.duran@superalloy.nl>

	* TODO,
	  lib/rucola/rucola_support/notifications/notifications.rb,
	  test/test_notifications.rb:

	Reverted the deprecation of Notifications #notify_on and replaced #when with #once.

2007-11-19 Eloy Duran <e.duran@superalloy.nl>

	* rucola_generators/rucola_plugin/templates/init.rb.erb:

	- Use the updated #before_boot & #after_boot methods.
	- Added the new #after_launch method.

2007-11-19 Eloy Duran <e.duran@superalloy.nl>

	* TODO,
	  lib/rucola/initializer.rb,
	  lib/rucola/plugin.rb,