@@ -35,3 +35,18 @@ describe "NSObject default mixins" do
     NotSubClassOfRC.methods.should.not.include '_rucola_register_initialize_hook'
   end
 end
+
+describe "NSImage.imageNamed" do
+  it "should also find images in app/assets" do
+    image1 = File.join(Rucola::RCApp.assets_path, 'hot_babe.jpg')
+    image2 = File.join(Rucola::RCApp.assets_path, 'not_so_hot_babe.png')
+    Dir.expects(:glob).with("#{Rucola::RCApp.assets_path}/*.*").returns(['.', '..', image2, image1])
+    OSX::NSImage.any_instance.expects(:initWithContentsOfFile).with(image1)
+    OSX::NSImage.imageNamed('hot_babe')
+  end
+  
+  it "should pass any unfound image name on to the original implementation" do
+    OSX::NSImage.expects(:super_imageNamed).with('whateva')
+    OSX::NSImage.imageNamed('whateva')
+  end
+end
